overlapping issues resolved

--- a/hosp/src/styles/confirm.css
+++ b/hosp/src/styles/confirm.css
@@ -1,75 +1,75 @@
 .dashboard {
-    background-color: rgba(255, 255, 255, 1);
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-  }
-  
-  .dashboard .div {
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(206, 44, 107, 0.2) 100%);
-    background-color: rgba(255, 255, 255, 1);
-    height: 1080px;
-    position: relative;
-    width: 1920px;
-  }
-  
-  .dashboard .overlap {
-    background-color: #ffffff;
-    height: 1080px;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 402px;
-  }
-  
-  .dashboard .line {
-    height: 1px;
-    left: 63px;
-    object-fit: cover;
-    position: absolute;
-    top: 322px;
-    width: 276px;
-  }
-  
-  .dashboard .text-wrapper {
-    color: #000000;
-    font-family: "SF Pro Display-SemiboldItalic", Helvetica;
-    font-size: 20px;
-    font-style: italic;
-    font-weight: 400;
-    left: 129px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    text-align: center;
-    top: 266px;
-    white-space: nowrap;
-  }
-  
-  .dashboard .img {
-    height: 1px;
-    left: 63px;
-    object-fit: cover;
-    position: absolute;
-    top: 410px;
-    width: 276px;
-  }
-  
-  .dashboard .text-wrapper-2 {
-    color: #000000;
-    font-family: "SF Pro Display-SemiboldItalic", Helvetica;
-    font-size: 20px;
-    font-style: italic;
-    font-weight: 400;
-    left: 125px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    text-align: center;
-    top: 354px;
-    white-space: nowrap;
-  }
+  background-color: rgba(255, 255, 255, 1);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+}
+
+.dashboard .div {
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(206, 44, 107, 0.2) 100%);
+  background-color: rgba(255, 255, 255, 1);
+  height: 1080px;
+  position: relative;
+  width: 1920px;
+}
+
+.dashboard .overlap {
+  background-color: #ffffff;
+  height: 1080px;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 402px;
+}
+
+.dashboard .line {
+  height: 1px;
+  left: 63px;
+  object-fit: cover;
+  position: absolute;
+  top: 322px;
+  width: 276px;
+}
+
+.dashboard .text-wrapper {
+  color: #000000;
+  font-family: "SF Pro Display-SemiboldItalic", Helvetica;
+  font-size: 20px;
+  font-style: italic;
+  font-weight: 400;
+  left: 129px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-align: center;
+  top: 266px;
+  white-space: nowrap;
+}
+
+.dashboard .img {
+  height: 1px;
+  left: 63px;
+  object-fit: cover;
+  position: absolute;
+  top: 410px;
+  width: 276px;
+}
+
+.dashboard .text-wrapper-2 {
+  color: #000000;
+  font-family: "SF Pro Display-SemiboldItalic", Helvetica;
+  font-size: 20px;
+  font-style: italic;
+  font-weight: 400;
+  left: 125px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-align: center;
+  top: 354px;
+  white-space: nowrap;
+}
   
   .dashboard .line-2 {
     height: 1px;
@@ -198,7 +198,6 @@
   }
   
   .dashboard .overlap-2 {
-    background-image: url(./rectangle-10.svg);
     background-size: 100% 100%;
     height: 1036px;
     left: 452px;
